opa-kubernetes/04-privileged/pod-valid.yaml
apiVersion: v1
kind: Pod
metadata:
  name: normal-pod
  labels:
    team: devops
spec:
  containers:
    - name: nginx
      image: nginx:1.25
      resources:
        limits:
          cpu: "500m"
          memory: "256Mi"
        requests:
          cpu: "200m"
          memory: "128Mi"
